--- a/pom.xml
+++ b/pom.xml
@@ -12,11 +12,14 @@
   <name>pavelm_kata Maven Webapp</name>
   <url>http://maven.apache.org</url>
   <dependencies>
+    <!-- https://mvnrepository.com/artifact/org.springframework/spring-webmvc -->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
-      <version>5.2.13.RELEASE</version>
+      <version>5.3.24</version>
     </dependency>
+
+
 
     <dependency>
       <groupId>org.thymeleaf</groupId>
@@ -61,11 +64,14 @@
       <scope>provided</scope>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.springframework/spring-orm -->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-orm</artifactId>
-      <version>5.2.13.RELEASE</version>
+      <version>5.3.24</version>
     </dependency>
+
+
 
     <dependency>
       <groupId>org.aspectj</groupId>
@@ -82,5 +88,12 @@
   </dependencies>
   <build>
     <finalName>pavelm_kata</finalName>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>3.3.1</version>
+      </plugin>
+    </plugins>
   </build>
 </project>
